mobilerobotics_ws/log/build_2023-12-01_20-31-03/pathing/stderr.log
  File "/home/april/mobilerobotics_ws/install/pathing/lib/python3.8/site-packages/pathing/standard_movement.py", line 24
    self.turn(math.pi/)
                      ^
SyntaxError: invalid syntax

